v5/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from e:\PPL\v5\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'-'", "'-.'", "'+'", "'+.'", "'*'", "'*.'", 
                     "'\\'", "'\\.'", "'%'", "'Body'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndWhile'", 
                     "'For'", "'EndFor'", "'Break'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'True'", "'False'", "'EndDo'", "'!'", "'&&'", "'||'", 
                     "'='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", "';'", "':'", 
                     "','", "'.'", "'{'", "'}'", "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "RL_OP", "LOGICAL_OP", "MULTIPLYING", 
                      "BOOLEAN_LITERAL", "WS", "COMMENT", "UNTERMINATED_COMMENT", 
                      "ID", "SUB", "SUB_FLOAT", "ADD", "ADD_FLOAT", "MUL", 
                      "MUL_FLOAT", "DIV", "DIV_FLOAT", "MOD", "BODY", "CONTINUE", 
                      "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDWHILE", 
                      "FOR", "ENDFOR", "BREAK", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "ENDDO", "NEGATION", "CONJUNCTION", "DISJUNCTION", 
                      "ASSIGN", "EQUAL", "NOTEQUAL", "LESSTHAN", "GREATERTHAN", 
                      "LESSTHAN_EQUAL", "GREATERTHAN_EQUAL", "NOTEQUAL_FLOAT", 
                      "LESSTHAN_FLOAT", "GREATERTHAN_FLOAT", "LESSTHAN_EQUAL_FLOAT", 
                      "GREATERTHAN_EQUAL_FLOAT", "SEMI", "COLON", "COMMA", 
                      "DOT", "LB", "RB", "LP", "RP", "LSB", "RSB", "INT_LITERAL", 
                      "FLOAT_LITERAL", "STRING_LITERAL", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ARRAY_LITERAL", "LITERAL", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_declare = 1
    RULE_variable_list = 2
    RULE_variable = 3
    RULE_composit = 4
    RULE_composit_type = 5
    RULE_scalar = 6
    RULE_scalar_type = 7
    RULE_assign_stm = 8
    RULE_parameter_name = 9
    RULE_func_declare = 10
    RULE_stm_list = 11
    RULE_stm = 12
    RULE_function_call_stm = 13
    RULE_function_call = 14
    RULE_return_stm = 15
    RULE_if_stm = 16
    RULE_for_stm = 17
    RULE_while_stm = 18
    RULE_do_while_stm = 19
    RULE_break_stm = 20
    RULE_continue_stm = 21
    RULE_exp = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_index_exp = 29

    ruleNames =  [ "program", "var_declare", "variable_list", "variable", 
                   "composit", "composit_type", "scalar", "scalar_type", 
                   "assign_stm", "parameter_name", "func_declare", "stm_list", 
                   "stm", "function_call_stm", "function_call", "return_stm", 
                   "if_stm", "for_stm", "while_stm", "do_while_stm", "break_stm", 
                   "continue_stm", "exp", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "index_exp" ]

    EOF = Token.EOF
    RL_OP=1
    LOGICAL_OP=2
    MULTIPLYING=3
    BOOLEAN_LITERAL=4
    WS=5
    COMMENT=6
    UNTERMINATED_COMMENT=7
    ID=8
    SUB=9
    SUB_FLOAT=10
    ADD=11
    ADD_FLOAT=12
    MUL=13
    MUL_FLOAT=14
    DIV=15
    DIV_FLOAT=16
    MOD=17
    BODY=18
    CONTINUE=19
    DO=20
    ELSE=21
    ELSEIF=22
    ENDBODY=23
    ENDIF=24
    ENDWHILE=25
    FOR=26
    ENDFOR=27
    BREAK=28
    FUNCTION=29
    IF=30
    PARAMETER=31
    RETURN=32
    THEN=33
    VAR=34
    WHILE=35
    TRUE=36
    FALSE=37
    ENDDO=38
    NEGATION=39
    CONJUNCTION=40
    DISJUNCTION=41
    ASSIGN=42
    EQUAL=43
    NOTEQUAL=44
    LESSTHAN=45
    GREATERTHAN=46
    LESSTHAN_EQUAL=47
    GREATERTHAN_EQUAL=48
    NOTEQUAL_FLOAT=49
    LESSTHAN_FLOAT=50
    GREATERTHAN_FLOAT=51
    LESSTHAN_EQUAL_FLOAT=52
    GREATERTHAN_EQUAL_FLOAT=53
    SEMI=54
    COLON=55
    COMMA=56
    DOT=57
    LB=58
    RB=59
    LP=60
    RP=61
    LSB=62
    RSB=63
    INT_LITERAL=64
    FLOAT_LITERAL=65
    STRING_LITERAL=66
    ILLEGAL_ESCAPE=67
    UNCLOSE_STRING=68
    ARRAY_LITERAL=69
    LITERAL=70
    ERROR_CHAR=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declareContext,i)


        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 60
                self.var_declare()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 66
                self.func_declare()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ASSIGN)
            else:
                return self.getToken(BKITParser.ASSIGN, i)

        def scalar_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Scalar_typeContext)
            else:
                return self.getTypedRuleContext(BKITParser.Scalar_typeContext,i)


        def composit_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Composit_typeContext)
            else:
                return self.getTypedRuleContext(BKITParser.Composit_typeContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_var_declare




    def var_declare(self):

        localctx = BKITParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(BKITParser.VAR)
            self.state = 75
            self.match(BKITParser.COLON)

            self.state = 76
            self.variable()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 77
                self.match(BKITParser.ASSIGN)
                self.state = 80
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.BOOLEAN_LITERAL, BKITParser.INT_LITERAL, BKITParser.FLOAT_LITERAL, BKITParser.STRING_LITERAL]:
                    self.state = 78
                    self.scalar_type()
                    pass
                elif token in [BKITParser.ARRAY_LITERAL]:
                    self.state = 79
                    self.composit_type()
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 84
                self.match(BKITParser.COMMA)
                self.state = 85
                self.variable()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.ASSIGN:
                    self.state = 86
                    self.match(BKITParser.ASSIGN)
                    self.state = 89
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [BKITParser.BOOLEAN_LITERAL, BKITParser.INT_LITERAL, BKITParser.FLOAT_LITERAL, BKITParser.STRING_LITERAL]:
                        self.state = 87
                        self.scalar_type()
                        pass
                    elif token in [BKITParser.ARRAY_LITERAL]:
                        self.state = 88
                        self.composit_type()
                        pass
                    else:
                        raise NoViableAltException(self)



                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_list




    def variable_list(self):

        localctx = BKITParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.variable()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 101
                self.match(BKITParser.COMMA)
                self.state = 102
                self.variable()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def composit(self):
            return self.getTypedRuleContext(BKITParser.CompositContext,0)


        def scalar(self):
            return self.getTypedRuleContext(BKITParser.ScalarContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.composit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.scalar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INT_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LITERAL)
            else:
                return self.getToken(BKITParser.INT_LITERAL, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_composit




    def composit(self):

        localctx = BKITParser.CompositContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_composit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(BKITParser.ID)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 113
                self.match(BKITParser.LSB)
                self.state = 114
                self.match(BKITParser.INT_LITERAL)
                self.state = 115
                self.match(BKITParser.RSB)
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LSB):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Composit_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY_LITERAL(self):
            return self.getToken(BKITParser.ARRAY_LITERAL, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_composit_type




    def composit_type(self):

        localctx = BKITParser.Composit_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_composit_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(BKITParser.ARRAY_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_scalar




    def scalar(self):

        localctx = BKITParser.ScalarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_scalar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scalar_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LITERAL(self):
            return self.getToken(BKITParser.INT_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(BKITParser.FLOAT_LITERAL, 0)

        def BOOLEAN_LITERAL(self):
            return self.getToken(BKITParser.BOOLEAN_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(BKITParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_scalar_type




    def scalar_type(self):

        localctx = BKITParser.Scalar_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_scalar_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(((((_la - 4)) & ~0x3f) == 0 and ((1 << (_la - 4)) & ((1 << (BKITParser.BOOLEAN_LITERAL - 4)) | (1 << (BKITParser.INT_LITERAL - 4)) | (1 << (BKITParser.FLOAT_LITERAL - 4)) | (1 << (BKITParser.STRING_LITERAL - 4)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def index_exp(self):
            return self.getTypedRuleContext(BKITParser.Index_expContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_assign_stm




    def assign_stm(self):

        localctx = BKITParser.Assign_stmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign_stm)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.index_exp()
                self.state = 127
                self.match(BKITParser.ASSIGN)
                self.state = 128
                self.exp()
                self.state = 129
                self.match(BKITParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(BKITParser.ID)
                self.state = 132
                self.match(BKITParser.ASSIGN)
                self.state = 133
                self.exp()
                self.state = 134
                self.match(BKITParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter_name




    def parameter_name(self):

        localctx = BKITParser.Parameter_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.variable_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def stm_list(self):
            return self.getTypedRuleContext(BKITParser.Stm_listContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def parameter_name(self):
            return self.getTypedRuleContext(BKITParser.Parameter_nameContext,0)


        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declare




    def func_declare(self):

        localctx = BKITParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKITParser.FUNCTION)
            self.state = 141
            self.match(BKITParser.COLON)
            self.state = 142
            self.match(BKITParser.ID)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 143
                self.match(BKITParser.PARAMETER)
                self.state = 144
                self.match(BKITParser.COLON)
                self.state = 145
                self.parameter_name()


            self.state = 148
            self.match(BKITParser.BODY)
            self.state = 149
            self.match(BKITParser.COLON)

            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 151
                self.var_declare()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.stm_list()

            self.state = 159
            self.match(BKITParser.ENDBODY)
            self.state = 160
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stm_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StmContext)
            else:
                return self.getTypedRuleContext(BKITParser.StmContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_stm_list




    def stm_list(self):
